--- a/index.html
+++ b/index.html
@@ -17,7 +17,40 @@
   </head>
   <body>
     <!--==================== HEADER ====================-->
-    <header class="header" id="header"></header>
+    <header class="header" id="header">
+      <nav class="nav container">
+        <a href="#" class="nav_logo">kenta</a>
+
+        <div class="nav__menu" id="nav__menu">
+          <ul class="nav__list grid">
+            <li class="nav__item">
+              <a href="#home" class="nav__link"> <i class="uil uil-home"></i> Home </a>
+            </li>
+
+            <li class="nav__item">
+              <a href="#about" class="nav__link"><i class="uil uil-user"></i> About</a>
+            </li>
+
+            <li class="nav__item">
+              <a href="#skills" class="nav__link"><i class="uil uil-file-alt"></i> skills</a>
+            </li>
+
+            <li class="nav__item">
+              <a href="#services" class="nav__link"><i class="uil uil-briefcase-alt"></i> Services</a>
+            </li>
+
+            <li class="nav__item">
+              <a href="#work" class="nav__link"><i class="uil uil-scenery"></i> Work</a>
+            </li>
+
+            <li class="nav__item">
+              <a href="#contact" class="nav__link"><i class="uil uil-message"></i> Contact</a>
+            </li>
+          </ul>
+          <i class="uil uil-times nav_close" id="nav-close"></i>
+        </div>
+      </nav>
+    </header>
 
     <!--==================== MAIN ====================-->
     <main class="main">
