--- a/index.html
+++ b/index.html
@@ -121,7 +121,43 @@
       </section>
 
       <!--==================== ABOUT ====================-->
-      <section class="about section" id="about"></section>
+      <section class="about section" id="about">
+        <h2 class="section__title">About Me</h2>
+        <span class="section__subtitle">My introduction</span>
+
+        <div class="about__container container grid">
+          <img src="assets/img/about.jpg" alt="" class="about__img">
+
+          <div class="about__data">
+            <p class="about__description">
+              home__descriptionが記載されます。home__descriptionが記載されます。
+              home__descriptionが記載されます。home__descriptionが記載されます。home__descriptionが記載されます。
+            </p>
+              <div class="about__info">
+                <div>
+                  <span class="about__info-title">08+</span>
+                  <span class="about__info-name">Years <br> experience</span>
+                </div>
+
+                <div>
+                  <span class="about__info-title">20+</span>
+                  <span class="about__info-name">Completed <br> project</span>
+                </div>
+
+                <div>
+                  <span class="about__info-title">05+</span>
+                  <span class="about__info-name">Companies <br> worked</span>
+                </div>
+              </div>
+            
+              <div class="about__buttons">
+                <a dawnload="" href="" class="button button--flex">
+                  ダウンロードcsv<i class="uil uil-download-alt button_icon"></i>
+                </a>
+              </div>
+          </div>
+        </div>
+      </section>
 
       <!--==================== SKILLS ====================-->
       <section class="skills section" id="skills"></section>
