--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
         </div>
       </section>
 
+
       <!--==================== ABOUT ====================-->
       <section class="about section" id="about">
         <h2 class="section__title">About Me</h2>
@@ -159,23 +160,197 @@
         </div>
       </section>
 
+
       <!--==================== SKILLS ====================-->
-      <section class="skills section" id="skills"></section>
+      <section class="skills section" id="skills">
+        <h2 class="section__title">Skills</h2>
+        <span class="section__subtitle">My technical level</span>
+
+        <div class="skills__container container grid">
+          <div>
+            <!-- --------------skill 1 (Front)-------------------------------- -->
+            <div class="skills__content skills__open">
+              <div class="skills__header">
+                <!-- アイコン画像 -->
+                <i class="uil uil-arrow skills__icon"></i>
+
+                <div>
+                  <h1 class="skills__title">Frontend Developer</h1>
+                  <span class="skills__subtitle">More than 4 years</span>
+                </div>
+                <!-- ↓画像 -->
+                <i class="uil uil-angle-down skills__arrow"></i>
+              </div>
+
+              <div class="skills__list grid">
+                <div class="skills__data">
+                  <div class="skills__titles">
+                    <h3 class="skills__name">HTML</h3>
+                    <span class="skills__number">90%</span>
+                  </div>
+                  <div class="skills__bar">
+                    <span class="skills__percentage skills__html"></span>
+                  </div>
+                </div>
+
+                <div class="skills__data">
+                  <div class="skills__titles">
+                    <h3 class="skills__name">CSS/SCSS</h3>
+                    <span class="skills__number">80%</span>
+                  </div>
+                  <div class="skills__bar">
+                    <span class="skills__percentage skills__css"></span>
+                  </div>
+                </div>
+
+                <div class="skills__data">
+                  <div class="skills__titles">
+                    <h3 class="skills__name">JavaScript</h3>
+                    <span class="skills__number">70%</span>
+                  </div>
+                  <div class="skills__bar">
+                    <span class="skills__percentage skills__js"></span>
+                  </div>
+                </div>
+
+              </div>
+            </div>
+
+            <!-- ---------------skill 2 (Backend)--------------------->
+            <div class="skills__content skills__close">
+              <div class="skills__header">
+                <i class="uil uil-database skills__icon"></i>
+
+                <div>
+                  <h1 class="skills__title">Backend Developer</h1>
+                  <span class="skills__subtitle">More than 4 years</span>
+                </div>
+
+                <!-- ↓画像 -->
+                <i class="uil uil-angle-down skills__arrow"></i>
+              </div>
+
+              <div class="skills__list grid">
+                <div class="skills__data">
+                  <div class="skills__titles">
+                    <h3 class="skills__name">PHP(Laravel)</h3>
+                    <span class="skills__number">85%</span>
+                  </div>
+                  <div class="skills__bar">
+                    <span class="skills__percentage skills__laravel"></span>
+                  </div>
+                </div>
+
+                <div class="skills__data">
+                  <div class="skills__titles">
+                    <h3 class="skills__name">PHP(Cakephp)</h3>
+                    <span class="skills__number">80%</span>
+                  </div>
+                  <div class="skills__bar">
+                    <span class="skills__percentage skills__cakephp"></span>
+                  </div>
+                </div>
+
+                <div class="skills__data">
+                  <div class="skills__titles">
+                    <h3 class="skills__name">Node.js(Express)</h3>
+                    <span class="skills__number">70%</span>
+                  </div>
+                  <div class="skills__bar">
+                    <span class="skills__percentage skills__node"></span>
+                  </div>
+                </div>
+
+                <div class="skills__data">
+                  <div class="skills__titles">
+                    <h3 class="skills__name">Python(Flask)</h3>
+                    <span class="skills__number">50%</span>
+                  </div>
+                  <div class="skills__bar">
+                    <span class="skills__percentage skills__flask"></span>
+                  </div>
+                </div>
+
+                <div class="skills__data">
+                  <div class="skills__titles">
+                    <h3 class="skills__name">Java</h3>
+                    <span class="skills__number">50%</span>
+                  </div>
+                  <div class="skills__bar">
+                    <span class="skills__percentage skills__java"></span>
+                  </div>
+                </div>
+
+                <div class="skills__data">
+                  <div class="skills__titles">
+                    <h3 class="skills__name">C</h3>
+                    <span class="skills__number">60%</span>
+                  </div>
+                  <div class="skills__bar">
+                    <span class="skills__percentage skills__c"></span>
+                  </div>
+                </div>
+
+              </div>
+            </div>
+
+              <!-- ----------------- skill 3 (機械学習) -------------------->
+              <div class="skills__content skills__close">
+                <div class="skills__header">
+                  <!-- アイコン画像 -->
+                  <i class="uil uil-robot skills__icon"></i>
+  
+                  <div>
+                    <h1 class="skills__title">AI Developer</h1>
+                    <span class="skills__subtitle">More than 1 years</span>
+                  </div>
+  
+                  <!-- ↓画像 -->
+                <i class="uil uil-angle-down skills__arrow"></i>
+                </div>
+  
+                <div class="skills__list grid">
+                  <div class="skills__data">
+                    <div class="skills__titles">
+                      <h3 class="skills__name">Python</h3>
+                      <span class="skills__number">50%</span>
+                    </div>
+                    <div class="skills__bar">
+                      <span class="skills__percentage skills__ai"></span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+          </div>
+
+          <!-- <div> -->
+
+          </div>
+        </div>
+      </section>
 
       <!--==================== QUALIFICATION ====================-->
-      <section class="qualification section"></section>
+      <section class="qualification section">
+
+      </section>
+
 
       <!--==================== SERVICES ====================-->
       <section class="services section" id="services"></section>
 
+
       <!--==================== PORTFOLIO ====================-->
       <section class="portfolio section" id="portfolio"></section>
+
 
       <!--==================== PROJECT IN MIND ====================-->
       <section class="project section"></section>
 
+
       <!--==================== TESTIMONIAL ====================-->
       <section class="testimonial section"></section>
+
 
       <!--==================== CONTACT ME ====================-->
       <section class="contact section" id="contact"></section>
