--- a/index.html
+++ b/index.html
@@ -330,8 +330,165 @@
         </div>
       </section>
 
+
       <!--==================== QUALIFICATION ====================-->
       <section class="qualification section">
+        <h2 class="section__title">Qualification</h2>
+        <span class="section__subtitle">My personal Journey</span>
+
+        <div class="qualification__container container">
+          <div class="qualification__tabs">
+            <div class="qualification__button button--flex qualification__active" data-target='#education'>
+              <i class="uil uil-graduation-cap qualification__icon"></i>
+              Education
+            </div>
+
+            <div class="qualification__button button--flex" data-target="#work">
+              <i class="uil uil-briefcase-alt qualification__icon"></i>
+              Work
+            </div>
+          </div>
+
+            <div class="qualification__sessions">
+              <!-- qualification content 1 -->
+              <div class="qualification__content qualification__active" data-content id="education">
+                <!-- qualification 1 -->
+                <div class="qualification__data">
+                  <div>
+                    <h3 class="qualification__title">Computer Enginner</h3>
+                    <span class="qualification__subtitle">kyutech university</span>
+                    <div class="qualification__calendar">
+                      <i class="uil uil-calendar-alt"></i>
+                      2019 - 2023
+                    </div>
+                  </div>
+
+                  <div>
+                    <span class="qualification__rounder"></span>
+                    <span class="qualification__line"></span>
+                  </div>
+                </div>
+
+                <!-- qualification 2 -->
+                <div class="qualification__data">
+                  <div></div>
+
+                  <div>
+                    <span class="qualification__rounder"></span>
+                    <span class="qualification__line"></span>
+                  </div>
+
+                  <div>
+                    <h3 class="qualification__title">Web Design</h3>
+                    <span class="qualification__subtitle">Spain - Institute</span>
+                    <div class="qualification__calendar">
+                      <i class="uil uil-calendar-alt"></i>
+                      2014 - 2018
+                    </div>
+                  </div>
+
+                </div>
+
+                <!-- qualification 3 -->
+                <div class="qualification__data">
+                  <div>
+                    <h3 class="qualification__title">Web Development</h3>
+                    <span class="qualification__subtitle">Peru -  university</span>
+                    <div class="qualification__calendar">
+                      <i class="uil uil-calendar-alt"></i>
+                      2009 - 2014
+                    </div>
+                  </div>
+
+                  <div>
+                    <span class="qualification__rounder"></span>
+                    <span class="qualification__line"></span>
+                  </div>
+                </div>
+
+                <!-- qualification 4 -->
+                <div class="qualification__data">
+                  <div></div>
+
+                  <div>
+                    <span class="qualification__rounder"></span>
+                    <span class="qualification__line"></span>
+                  </div>
+
+
+                  <div>
+                    <h3 class="qualification__title">Master in UI/UX</h3>
+                    <span class="qualification__subtitle">kyutech university</span>
+                    <div class="qualification__calendar">
+                      <i class="uil uil-calendar-alt"></i>
+                      2004 - 2009
+                    </div>
+                  </div>
+
+                </div>
+
+              </div>
+
+              <!-- qualification content 2 -->
+              <div class="qualification__content" data-content id="work">
+                <!-- qualification 1 -->
+                <div class="qualification__data">
+                  <div>
+                    <h3 class="qualification__title">Soft Enginner</h3>
+                    <span class="qualification__subtitle">Qtmedia university</span>
+                    <div class="qualification__calendar">
+                      <i class="uil uil-calendar-alt"></i>
+                      2019 - 2023
+                    </div>
+                  </div>
+
+                  <div>
+                    <span class="qualification__rounder"></span>
+                    <span class="qualification__line"></span>
+                  </div>
+                </div>
+
+                <!-- qualification 2 -->
+                <div class="qualification__data">
+                  <div></div>
+
+                  <div>
+                    <span class="qualification__rounder"></span>
+                    <span class="qualification__line"></span>
+                  </div>
+
+                  <div>
+                    <h3 class="qualification__title">Microsoft Design</h3>
+                    <span class="qualification__subtitle">Apple - Institute</span>
+                    <div class="qualification__calendar">
+                      <i class="uil uil-calendar-alt"></i>
+                      2014 - 2018
+                    </div>
+                  </div>
+
+                </div>
+
+                <!-- qualification 3 -->
+                <div class="qualification__data">
+                  <div>
+                    <h3 class="qualification__title">Google Development</h3>
+                    <span class="qualification__subtitle">google -  university</span>
+                    <div class="qualification__calendar">
+                      <i class="uil uil-calendar-alt"></i>
+                      2009 - 2014
+                    </div>
+                  </div>
+
+                  <div>
+                    <span class="qualification__rounder"></span>
+                    <!-- <span class="qualification__line"></span> -->
+                  </div>
+                </div>
+
+              </div>
+            
+          </div>
+        </div>
 
       </section>
 
