--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" />
 
     <!--==================== SWIPER CSS ====================-->
-    <link rel="stylesheet" href="" />
+    <link rel="stylesheet" href="assets/css/swiper-bundle.min.css" />
 
     <!--==================== CSS ====================-->
     <link rel="stylesheet" href="assets/css/styles.css" />
@@ -40,7 +40,7 @@
             </li>
 
             <li class="nav__item">
-              <a href="#work" class="nav__link"><i class="uil uil-scenery nav__icon"></i> Work</a>
+              <a href="#portfolio" class="nav__link"><i class="uil uil-scenery nav__icon"></i> portfolio</a>
             </li>
 
             <li class="nav__item">
@@ -643,7 +643,75 @@
 
 
       <!--==================== PORTFOLIO ====================-->
-      <section class="portfolio section" id="portfolio"></section>
+      <section class="portfolio section" id="portfolio">
+        <h2 class="section__title">portfolio</h2>
+        <span class="section__subtitle">Most recent work</span>
+
+        <div class="portfolio__container container swiper mySwiper">
+          <div class="swiper-wrapper">
+              <!--==================== PORTFOLIO 1 ====================-->
+              <div class="portfolio__content grid swiper-slide">
+                <img src="assets/img/portfolio1.jpg" alt="" class="portfolio__img">
+
+                <div class="portfolio__data">
+                  <h3 class="portfolio__title">Modern Website</h3>
+                  <p class="portfolio__description">
+                    Website adaptable to all devices,modern website
+                  </p>
+
+                  <a href="#" class="button button--flex button--small portfolio__button">
+                    Demo
+                    <i class="uil uil-arrow-right button__icon"></i>
+                  </a>
+                </div>
+              </div>
+
+              <!--==================== PORTFOLIO 2 ====================-->
+              <div class="portfolio__content grid swiper-slide">
+                <img src="assets/img/portfolio2.jpg" alt="" class="portfolio__img">
+
+                <div class="portfolio__data">
+                  <h3 class="portfolio__title">ECsite</h3>
+                  <p class="portfolio__description">
+                    Website adaptable to all devices,modern website
+                  </p>
+
+                  <a href="#" class="button button--flex button--small portfolio__button">
+                    Demo
+                    <i class="uil uil-arrow-right button__icon"></i>
+                  </a>
+                </div>
+              </div>
+
+              <!--==================== PORTFOLIO 3 ====================-->
+              <div class="portfolio__content grid swiper-slide">
+                <img src="assets/img/portfolio3.jpg" alt="" class="portfolio__img">
+
+                <div class="portfolio__data">
+                  <h3 class="portfolio__title">Web apprication</h3>
+                  <p class="portfolio__description">
+                    Website adaptable to all devices,modern website
+                  </p>
+
+                  <a href="#" class="button button--flex button--small portfolio__button">
+                    Demo
+                    <i class="uil uil-arrow-right button__icon"></i>
+                  </a>
+                </div>
+              </div>
+
+          </div>
+          <!-- swiperのarrow -->
+          <div class="swiper-button-next">
+            <i class="uil uil-angle-right-b swiper-portfolio-icon"></i>
+          </div>
+          <div class="swiper-button-prev">
+            <i class="uil uil-angle-left-b swiper-portfolio-icon"></i>
+          </div>
+          <!-- swiperのpagination -->
+          <div class="swiper-pagination"></div>
+        </div>
+      </section>
 
 
       <!--==================== PROJECT IN MIND ====================-->
@@ -664,7 +732,7 @@
     <!--==================== SCROLL TOP ====================-->
 
     <!--==================== SWIPER JS ====================-->
-    <script src=""></script>
+    <script src="assets/js/swiper-bundle.min.js"></script>
 
     <!--==================== MAIN JS ====================-->
     <script src="assets/js/main.js"></script>
