--- a/index.html
+++ b/index.html
@@ -715,7 +715,24 @@
 
 
       <!--==================== PROJECT IN MIND ====================-->
-      <section class="project section"></section>
+      <section class="project section">
+        <div class="project__bg">
+          <div class="project__container container grid">
+            <div class="project__data">
+              <h2 class="project__title">You have a new Project</h2>
+              <p class="project__description">Contact me now and get a</p>
+
+              <a href="#contact" class="project__button button button--flex button--white">
+                Contact Me
+                <i class="uil uil-message project__icon button__icon"></i>
+              </a>
+            </div>
+
+            <img src="assets/img/project.png" alt="" class="project__img">
+          </div>
+        </div>
+
+      </section>
 
 
       <!--==================== TESTIMONIAL ====================-->
