--- a/index.html
+++ b/index.html
@@ -828,7 +828,63 @@
 
 
       <!--==================== CONTACT ME ====================-->
-      <section class="contact section" id="contact"></section>
+      <section class="contact section" id="contact">
+        <h2 class="section__title">Contact Me</h2>
+        <span class="section__subtitle">Get in touch</span>
+
+        <div class="contact__container container grid">
+          <div>
+            <div class="contact__information">
+              <i class="uil uil-envelope contact__icon"></i>
+
+              <div>
+                <h3 class="contact__title">Email</h3>
+                <span class="contact__subtitle">fujimorikenta@iclod.com</span>
+              </div>
+            </div>
+
+            <div class="contact__information">
+              <i class="uil uil-map-marker contact__icon"></i>
+
+              <div>
+                <h3 class="contact__title">Location</h3>
+                <span class="contact__subtitle">福岡県飯塚市</span>
+              </div>
+            </div>
+          </div>
+
+          <form action="" class="contact__form grid">
+            <div class="contact__inputs grid">
+              <div class="contact__content">
+                <lavel class="contact__label">Name</lavel>
+                <input type="text" class="contact__input">
+              </div>
+          
+              <div class="contact__content">
+                <lavel class="contact__label">Email</lavel>
+                <input type="emai" class="contact__input">
+              </div>
+
+              <div class="contact__content">
+                <lavel class="contact__label">Project</lavel>
+                <input type="text" class="contact__input">
+              </div>
+
+              <div class="contact__content">
+                <lavel class="contact__label">Message</lavel>
+                <textarea name="" id="" cols="0" rows="7" class="contact__input"></textarea>
+              </div>
+
+              <div>
+                <a href="#" class="button button--href">
+                  Send Message
+                  <i class="uil uil-message button__icon"></i>
+                </a>
+              </div>
+            </div>
+          </form>
+        </div>
+      </section>
     </main>
 
     <!--==================== FOOTER ====================-->
