--- a/index.html
+++ b/index.html
@@ -888,7 +888,42 @@
     </main>
 
     <!--==================== FOOTER ====================-->
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <div class="footer__bg">
+        <div class="footer__container container grid">
+          <div>
+            <h1 class="footer__title">Kenta</h1>
+            <span class="footer__subtitle">Fronted Developer</span>
+          </div>
+
+          <ul class="footer__links">
+            <li>
+              <a href="#services" class="footer__link">Services</a>
+            </li>
+            <li>
+              <a href="#portfolio" class="footer__link">Portfolio</a>
+            </li>
+            <li>
+              <a href="#contact" class="footer__link">Contactme</a>
+            </li>
+          </ul>
+
+          <div class="footer__socials">
+            <a href="" target="_blank" class="footer__social">
+              <i class="uil uil-instagram"></i>
+            </a>
+            <a href="" target="_blank" class="footer__social">
+              <i class="uil uil-twitter"></i>
+            </a>
+            <a href=""  target="_blank"class="footer__social">
+              <i class="uil uil-facebook"></i>
+            </a>
+          </div>
+        </div>
+
+        <p class="footer__copy">&#169; Kenta. All right reserved</p>
+      </div>
+    </footer>
 
     <!--==================== SCROLL TOP ====================-->
 
