--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         <span class="section__subtitle">My technical level</span>
 
         <div class="skills__container container grid">
-          <div>
+          
             <!-- --------------skill 1 (Front)-------------------------------- -->
             <div class="skills__content skills__open">
               <div class="skills__header">
@@ -326,11 +326,6 @@
               </div>
 
           </div>
-
-          <!-- <div> -->
-
-          </div>
-        </div>
       </section>
 
 
@@ -352,7 +347,7 @@
             </div>
           </div>
 
-            <div class="qualification__sessions">
+            <div class="qualification__sections">
               <!-- qualification content 1 -->
               <div class="qualification__content qualification__active" data-content id="education">
                 <!-- qualification 1 -->
@@ -879,11 +874,12 @@
               </div>
 
               <div>
-                <a href="#" class="button button--href">
+                <a href="#" class="button button--flex">
                   Send Message
                   <i class="uil uil-message button__icon"></i>
                 </a>
               </div>
+
             </div>
           </form>
         </div>
